load div cutoffs from cached if after challenge has ended. also add reindex button for fixing missing challenges

--- a/info.toml
+++ b/info.toml
@@ -10,4 +10,5 @@ imports = [ "Permissions.as", "Time.as" ]
 defines = [ "DEV" ]
 # defines = [ "DEV", "UNIT_TEST" ]
 # defines = [ "UNIT_TEST" ]
+# defines = [ "RELEASE" ]
 optional_dependencies = [ "BetterChat" ]
