--- a/info.toml
+++ b/info.toml
@@ -5,7 +5,7 @@ category = "Race"
 version  = "0.0.3"
 
 [script]
-dependencies = [ "NadeoServices" ]
+dependencies = [ "NadeoServices", "TrackmaniaApiObjsAndHelpers" ]
 imports = [ "Permissions.as", "Time.as" ]
 #__DEFINES__
 # defines = [ "DEV" ]
