--- a/info.toml
+++ b/info.toml
@@ -2,7 +2,7 @@
 name     = "COTD HUD"
 author   = "XertroV"
 category = "Race"
-version  = "0.2.2-pre"
+version  = "0.2.1"
 
 [script]
 dependencies = ["NadeoServices"]
